--- a/config.json
+++ b/config.json
@@ -13,8 +13,8 @@
     "",
     "your grp id"
   ],
-  "helpPic": "https://i.postimg.cc/pV7xByGv/IMG-20250106-WA0007.png",
-  "welPic": "https://i.postimg.cc/3JQF0qWf/received-383729254132460.jpg",
+  "helpPic": "https://i.postimg.cc/SNm9B2p1/IMG-20250902-WA0048.jpg",
+  "welPic": "https://i.postimg.cc/SNm9B2p1/IMG-20250902-WA0048.jpg",
   "PORT": "3000",
   "delay": 100,
   "msg": {
