--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "packname": "My Sticker Pack",
   "author": "My Bot",
-  "botName": "Nayan Bot",
-  "botOwner": "Mohammad Nayan",
+  "botName": "EMon-BHai-Bot",
+  "botOwner": "EMON HAWLADAR",
   "ownerNumber": "8801615298449",
   "botNumber": "Your Bot Number",
   "autoUpdate": true,
   "timeZone": "Asia/Dhaka",
   "botUid": "",
-  "PREFIX": "/",
+  "PREFIX": ".",
   "admin": [
-    "your main number",
+    "8801309991724",
     "your grp id"
   ],
   "helpPic": "https://i.postimg.cc/pV7xByGv/IMG-20250106-WA0007.png",
